# corvidae

./: .gitignore  AGENTS.md  MEMORY.md  README.md  agent.yaml.example  design.md  design_logging_latency.md  eval_results.json  import_session.py  pyproject.toml  sessions.db.backup
.superpowers/brainstorm/3807-1777530346/content/: workflow-examples.html
.superpowers/brainstorm/3807-1777530346/state/: server-stopped
.superpowers/brainstorm/77730-1777598957/content/: architecture-v2.html  architecture.html
.superpowers/brainstorm/77730-1777598957/state/: server-stopped
corvidae/: __init__.py  agent.py  agent_loop.py  agent_turn.py  appraisal.py  attribution.py  channel.py  compaction.py  config_watcher.py  context.py  context_compact.py  conversation.py  critique.py  funnel.py  hooks.py  hot_reload.py  idle.py  jsonl_log.py  llm.py  llm_plugin.py  logging.py  main.py  mcp_client.py  memory.py  metrics.py  migrations.py  outcome_log.py  persistence.py  queue.py  retention.py  runtime.py  scaffold.py  task.py  thinking.py  tool.py  tool_collection.py  tuning.py  turn.py
corvidae/channels/: __init__.py  cli.py  irc.py
corvidae/commands/: redact.py  serve.py
corvidae/tools/: __init__.py  dream.py  files.py  goal_tracker.py  index.py  local_indexer.py  memory_tools.py  perf_mon.py  settings.py  shell.py  subagent.py  task_pipeline.py  web.py
docs/: configuration.md  design.md  irc.md  plugin-guide.md  prompt-guide.md
docs/plans/: corvidae-cleanup.md
plans/: agent-decomposition.md  agent-directions.md  agent-plugin-split.md  append-only-log.md  architecture-critique.md  async-hook-ordering.md  bootstrap-mapping.md  bootstrap-plan-adjustments.md  channel-queue-design.md  channels.md  cli-plugin-design.md  design.md  dockerfile.md  execute-tool-call.md  future-work.md  integration-tests.md  logging-design.md  new-hooks.md  personality-and-autonomy.md  phase-1.5-design.md  phase1-design-review.md  phase1-design.md  phase1-implementation.md  phase2-agent-turn-design.md  phase2-design.md  phase2.5-design-review.md  phase2.5-design.md  phase3-design.md  plugin-dependencies.md  plugin-extraction-bc-design.md  runtime-settings-tool.md  simplify-design.md  smoke-test.md  task-system-design.md
plans/implementation/: README.md  phase-0.md  phase-1a.md  phase-1b.md  phase-2-audit-fable.md  phase-2.md
prompts/: IRC.md  SOUL.md  appraisal.md  critique_adversarial.md  critique_constrained.md  critique_predictive.md  critique_provenance.md  memory_calibration.md  memory_consolidation.md
scripts/: eval_compaction.py  eval_memory.py  import_nanobot_session.py  regen_death_spiral_fixture.py  smoke_test.py
sherman/: agent.py  agent_loop.py  agent_loop_plugin.py  background.py  channel.py  channel_queue.py  cli_plugin.py  compaction.py  conversation.py  hooks.py  idle.py  irc_plugin.py  llm.py  logging.py  main.py  mcp_client.py  persistence.py  plugin_manager.py  prompt.py  queue.py  task.py  thinking.py  tool.py  tools.py
sherman/channels/: __init__.py  cli.py  irc.py
sherman/tools/: __init__.py  files.py  subagent.py  web.py
tests/: conftest.py  helpers.py  llm_response_fixtures.py  test_agent_helpers.py  test_agent_loop.py  test_agent_loop_plugin.py  test_agent_single_turn.py  test_agent_thinking_tools_hooks.py  test_agent_turn.py  test_appraisal_stage1.py  test_appraisal_stage2.py  test_attribution.py  test_background.py  test_channel.py  test_channel_queue.py  test_cli_plugin.py  test_cli_thinking_tools.py  test_compaction.py  test_compaction_config_validation.py  test_compaction_quality.py  test_config_watcher.py  test_context.py  test_context_compact.py  test_conversation.py  test_critique.py  test_depends_on_declarations.py  test_dispatch_tool_call.py  test_dream.py  test_execute_tool_call.py  test_funnel.py  test_funnel_deferred.py  test_goal_tracker.py  test_hook_arg_binding.py  test_hook_dispatch.py  test_hook_safety.py  test_hooks.py  test_hot_reload.py  test_idle_monitor.py  test_index.py  test_integration.py  (+46 more)
tests/evals/: __init__.py  metrics.py  test_metrics.py  test_retrieval_benchmark.py
tests/fixtures/: .gitignore  death_spiral_compaction.json  memory_retrieval_basic.json  memory_retrieval_contradictions.json  memory_retrieval_general.json
