[project]
name = "corvidae"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "apluggy @ git+https://github.com/schuyler/apluggy.git@main",
    "click>=8.0",
    "ddgs>=9.0",
    "mcp>=1.0",
    "pydle>=0.9",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "tiktoken>=0.7",
    "sqlite-vec>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
corvidae = "corvidae.main:corvidae"

[project.entry-points."corvidae.commands"]
cli = "corvidae.channels.cli:cli_command"
serve = "corvidae.commands.serve:serve_command"
scaffold = "corvidae.scaffold:scaffold_command"
redact = "corvidae.commands.redact:redact_command"

[project.entry-points.corvidae]
persistence = "corvidae.persistence:PersistencePlugin"
jsonl_log = "corvidae.jsonl_log:JsonlLogPlugin"
core_tools = "corvidae.tools:CoreToolsPlugin"
cli = "corvidae.channels.cli:CLIPlugin"
irc = "corvidae.channels.irc:IRCPlugin"
task = "corvidae.task:TaskPlugin"
subagent = "corvidae.tools.subagent:SubagentPlugin"
mcp = "corvidae.mcp_client:McpClientPlugin"
llm = "corvidae.llm_plugin:LLMPlugin"
compaction = "corvidae.compaction:CompactionPlugin"
memory = "corvidae.memory:MemoryPlugin"
memory_tools = "corvidae.tools.memory_tools:MemoryToolsPlugin"
funnel = "corvidae.funnel:FunnelPlugin"
thinking = "corvidae.thinking:ThinkingPlugin"
runtime_settings = "corvidae.tools.settings:RuntimeSettingsPlugin"
tools = "corvidae.tool_collection:ToolCollectionPlugin"
metrics = "corvidae.metrics:MetricsPlugin"
usage_log = "corvidae.metrics:UsageLogPlugin"
metrics_jsonl = "corvidae.metrics:MetricsJsonlPlugin"
outcome_log = "corvidae.outcome_log:OutcomeLogPlugin"
appraisal = "corvidae.appraisal:AppraisalPlugin"
critique = "corvidae.critique:CritiquePlugin"
agent = "corvidae.agent:Agent"
idle_monitor = "corvidae.idle:IdleMonitorPlugin"
hot_reload = "corvidae.hot_reload:HotReloadPlugin"
config_watcher = "corvidae.config_watcher:ConfigWatcherPlugin"

[tool.setuptools.packages.find]
include = ["corvidae*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["tests", "."]
markers = ["eval: live LLM evaluation tests (deselected by default, run with --run-eval)"]
filterwarnings = [
    "ignore::DeprecationWarning:_pytest",
]
timeout = 15
timeout_method = "thread"
